--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,18 +1,24 @@
 ---
-- name: "copy artifact into the server"
-  become: true
-  copy:
-    src: artifact.tar.gz
-    dest: ~/
+# - name: "copy artifact into the server"
+#   become: true
+#   copy:
+#     src: artifact.tar.gz
+#     dest: ~/
 
-- name: extract zipped artifact and install dependancies
-  become: true
-  shell: |
-    tar -xvzf ~/artifact.tar.gz
+# - name: extract zipped artifact and install dependancies
+#   become: true
+#   shell: |
+#     tar -xvzf ~/artifact.tar.gz
+- name: Extract artifact
+  become: true  
+  unarchive:
+    src: files/artifact.tar.gz
+    dest: /home/ubuntu
 
 - name: "start server"
   become: true
   shell: |
+    cd /home/ubuntu
     npm install
     pm2 stop default
     sudo pm2 start npm -- start
