--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -9,16 +9,61 @@
 #   become: true
 #   shell: |
 #     tar -xvzf ~/artifact.tar.gz
-- name: Extract artifact
-  become: true  
-  unarchive:
-    src: files/artifact.tar.gz
-    dest: /home/ubuntu
+# - name: Extract artifact
+#   become: true  
+#   unarchive:
+#     src: files/artifact.tar.gz
+#     dest: /home/ubuntu
 
-- name: "start server"
-  become: true
-  shell: |
-    cd /home/ubuntu
-    npm install
-    pm2 stop default
-    sudo pm2 start npm -- start
+# - name: "start server"
+#   become: true
+#   shell: |
+#     cd /home/ubuntu
+#     npm install
+#     pm2 stop default
+#     sudo pm2 start npm -- start
+- name: "show remote environment"
+    shell: env
+
+  # - name: install rsync on the ansible controller
+  #   become: yes
+  #   connection: local
+  #   package:
+  #     name: rsync
+  #     state: present
+  
+---
+  - name: "copy backend binaries"
+    become: yes
+    synchronize:
+      src: ../../backend/dist
+      dest: /home/ubuntu/uda_app
+      recursive: true
+
+  - name: "copy node_modules"
+    become: yes
+    synchronize:
+      src: ../../backend/node_modules
+      dest: /home/ubuntu/uda_app
+      recursive: true
+
+  - name: "delete anything that might already be running"
+    become: true
+    command: pm2 delete all
+    ignore_errors: true
+
+  - name: "start server"
+    become: true
+    command: pm2 start -f ./main.js
+    args:
+      chdir: /home/ubuntu/uda_app/dist
+    environment:
+     TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+     TYPEORM_MIGRATIONS_DIR: "./migrations"
+     TYPEORM_MIGRATIONS: "./migrations/*.js"
+     TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
+     TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+     TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
+     TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
+     TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+     TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
