--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,15 +215,18 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: ~/.circleci/ansible/inventory.txt
+          at: .circleci/ansible/inventory.txt
+      - run: 
+          name: View content of inventory.txt
+          command: cat .circleci/ansible/inventory.txt
       - run:
           name: Install awscli tar gzip
           command: |
-            cat .circleci/ansible/inventory.txt
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             sudo ./aws/install
             sudo apt install -y tar gzip    
+            
       - run:
           name: Run migrations
           command: |
@@ -239,7 +242,7 @@ jobs:
             then
              curl https://kvdb.io/GTEpHpRzixPUfazFwYdWhC/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
-      - revert-migrations
+      
       - destroy-environment 
        
   deploy-frontend:
@@ -248,7 +251,7 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: ~/.circleci/ansible/inventory.txt
+          at: .
       - run:
           name: Install dependencies
           command: |
